--- a/server/dune
+++ b/server/dune
@@ -1,5 +1,5 @@
 (executable
- (public_name esx_server)
- (name server)
- (libraries async core core_unix.command_unix)
- (preprocess (pps ppx_jane)))
+  (public_name esx_server)
+  (name server)
+  (libraries async core core_unix.command_unix esx_kernel yojson)
+  (preprocess (pps ppx_jane)))
